--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,6 +9,6 @@
   "permissions": ["scripting", "tabs", "activeTab"],
   "host_permissions": ["https://*/*", "http://*/*"],
   "background": {
-    "service_worker": "../src/background.js"
+    "service_worker": "./background.js"
   }
 }
